--- a/JS_SLIDER/index.html
+++ b/JS_SLIDER/index.html
@@ -7,7 +7,7 @@
  </head>
  <body>
 	 <div class="wrapper">
-		 <h1>Java script slider</h1>
+		 <h1>JavaScript slider</h1>
 		 <div class="slider-container">
 			 <div class="slider-track">
 				 <div class="slider-item"></div>
